KIC/corelation-id-lpugin-for-httpbin.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpbin-1
  name: httpbin
  annotations:
    konghq.com/plugins: correlation-id-plugin
spec:
  ports:
    - port: 2027
      name: http
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpbin-1

---
